NL-13 Stop locking on the session object, and re-test expiry before evicting
Second review round on #82. Two of these change the concurrency design rather
than patching it, and both were verified by mutation: the reviewer's own
technique, and the right one here, since three of the tests I added in 3c1731b
turned out to assert less than they claimed.

The lock was the session object itself, and that is Spring's session mutex.
WebUtils.getSessionMutex returns the attribute set by HttpSessionMutexListener
or, failing that, the session instance -- and that listener needs
ServletContext.addListener, which throws here until #17, so the fallback is
unconditional. I confirmed it from the spring-web 7.0.6 bytecode: getAttribute,
ifnonnull, else aload_0. SessionScope holds that mutex across
objectFactory.getObject(), i.e. across arbitrary application bean creation, so
synchronized(session) put the sweeper and the per-request lookup behind
application code, and admitted an ABBA deadlock against the singleton lock.
NettyHttpSession now carries a private lock nobody else can name. The three
concurrency assertions hold unchanged under it -- and still fail when the
locking is removed, which is what makes them worth having.

Eviction decided expiry outside the lock and then unbound unconditionally, so
it destroyed sessions that had been extended in between.
setMaxInactiveInterval is an ordinary volatile write taking no lock: a sweeper
that judged a session expired, blocked entering the eviction, and got in after
an "extend my session" call would tear down a session now live for another
hour, and the request that extended it would see IllegalStateException on its
next attribute access. evictIfExpired re-tests inside the lock; close() keeps
the unconditional form, which is what it wants.

That one needed a test shaped to the actual window. Racing the two threads
freely asserts nothing -- whichever wins is legitimate, so the assertion is
tautological, and the mutation survives. Holdin